main-container padding, gap fixed

--- a/assets/scss/layout/_main-container.scss
+++ b/assets/scss/layout/_main-container.scss
@@ -1,18 +1,19 @@
 .main__container {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 
-  gap: 2rem;
   max-width: $section-max-width;
   margin: 0 auto;
 
   padding: 2rem;
 
   @include breakpoint(md) {
-    padding: 2rem 4rem;
+    padding: 2rem 3rem;
   }
 
   @include breakpoint(lg) {
     flex-direction: row;
+    padding: 2rem 4rem;
   }
 }
